--- a/index.html
+++ b/index.html
@@ -585,39 +585,46 @@
                                 <div class="row">
                                     <div class="col-12">
                                         <small class="require">必須</small>
-                                        <h3>AGE <small>*18歳未満の方の応募はできません。</small></h3>
-                                        <input name="age" type="number" placeholder="20" maxlength="2" minlength="2" required="true" size="4" />
-                                        <p class="errormsg"></p>
+                                        <label>AGE <small>*18歳未満の方の応募はできません。</small><br />
+                                            <input name="age" type="number" placeholder="20" maxlength="2" minlength="2" required="true" size="6" />
+                                            <p class="errormsg"></p>
+                                        </label>
+                                        
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-12">
                                         <small class="require">必須</small>
-                                        <h3>NAME <small>*ニックネーム可</small></h3>
-                                        <input name="name" type="text" placeholder="HANAKO" maxlength="100" minlength="0" required="true" size="30" />
-                                        <p class="errormsg"></p>
+                                        <label>NAME <small>*ニックネーム可</small><br />
+                                            <input name="name" type="text" placeholder="HANAKO" maxlength="100" minlength="0" required="true" size="30" />
+                                            <p class="errormsg"></p>
+                                        </label>
+                                        
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-12">
                                         <small class="require">必須</small>
-                                        <h3>PHONE NUMBER</h3>
-                                        <input name="phone" type="telephone" placeholder="090****1234" maxlength="30" minlength="10" required="true" size="14" />
-                                        <p class="errormsg"></p>
+                                        <label>PHONE NUMBER<br />
+                                            <input name="phone" type="telephone" placeholder="090****1234" maxlength="30" minlength="10" required="true" size="14" />
+                                            <p class="errormsg"></p>
+                                        </label>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-12">
-                                        <h3>MAIL ADRESS</h3>
-                                        <input name="mail" type="email" placeholder="celine.fukuoka@celine.com" />
-                                        <p class="errormsg"></p>
+                                        <label>MAIL ADRESS<br />
+                                            <input name="mail" type="email" placeholder="celine.fukuoka@celine.com" />
+                                            <p class="errormsg"></p>
+                                        </label>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-12">
-                                        <h3>INQUERY</h3>
-                                        <textarea name="inquery" placeholder="連絡可能な時間帯、ご質問、ご相談など" rows="5"></textarea>
-                                        <p class="errormsg"></p>
+                                        <label>INQUERY<br />
+                                            <textarea name="inquery" placeholder="連絡可能な時間帯、ご質問、ご相談など" rows="5"></textarea>
+                                            <p class="errormsg"></p>
+                                        </label>
                                     </div>
                                 </div>
                                 <div class="center">
