--- a/index.html
+++ b/index.html
@@ -194,22 +194,22 @@
                     <p class="blackline"></p>
                     <div class="each">
                         <span>#01</span>
-                        <h3>パソコンに向かってお話しするだけ</h3>
+                        <h3>&ldquo; パソコンに向かってお話しするだけ &rdquo;</h3>
                         <p>チャットレディは、<strong>パソコンを使って男性とお話するお仕事です。</strong>男性はチャット（文字）での会話となっているので、人と対面でおしゃべりすることが苦手な方でも、パソコンに向かってお話するだけで大丈夫。男性も優しい方ばかりなので、もし嫌な人がいてもブロックできるので安心です。</p>
                     </div>
                     <div class="">
                         <span>#02</span>
-                        <h3>年齢や見た目なんて気にせずOK</h3>
+                        <h3>&ldquo; 年齢や見た目なんて気にせずOK &rdquo;</h3>
                         <p>男性は色んなタイプの方がいます。年齢やスタイルなんて気にしなくても、あなたの良いところを応援してくれる方ばかりなので「見た目に自信が、、」「年齢的に厳しいかな、、」そういった事を一切気にする必要はありません。</p>
                     </div>
                     <div class="">
                         <span>#03</span>
-                        <h3>好きなスタイルで働ける</h3>
+                        <h3>&ldquo; 好きなスタイルで働ける &rdquo;</h3>
                         <p>アダルトチャット等の強制は一切ありません。<strong>自分のスタイルでノンアダルトでもアダルトでもお好きな方で稼げます。</strong>天神駅・薬院駅近くの綺麗で広々としたオフィスでパソコンを使ってのお仕事なので、男性と直接会うことや触れられることは一切なし。こんな不安な時代でも安心して働けます。自分に合ったスタイルで楽しく稼いでください！</p>
                     </div>
                     <div class="">
                         <span>#04</span>
-                        <h3>空いている時間で自由に稼げる</h3>
+                        <h3>&ldquo; 空いている時間で自由に稼げる &rdquo;</h3>
                         <p>チャットレディのお仕事は、<strong>シフトや出勤ノルマ等一切ありません。</strong>プライベート最優先で空いた時間にお仕事できます。月に稼ぎたい分だけお仕事すればいいので、お仕事もプライベートも賢く充実させましょう！</p>
                     </div>
                 </div>
@@ -264,7 +264,7 @@
                 <div class="col-12 col-lg-5">
                     <div class="bene-img-wrap">
                         <img src="./res/benefit-1.png" alt="celineだけの最低時給保障" />
-                        <h2>celineだけの<br />最低時給保障</h2>
+                        <h2><p class="stars"></p>celineだけの<br />最低時給保障</h2>
                     </div>
                 </div>
                 <div class="col-12 col-md-10 offset-md-1 col-lg-7 offset-lg-0">
@@ -276,7 +276,7 @@
                 <div class="col-12 col-lg-5">
                     <div class="bene-img-wrap">
                         <img src="./res/benefit-2.png" alt="お客様との会話をサポート！" />
-                        <h2>お客様との会話を<br />サポート！</h2>
+                        <h2><p class="stars"></p>お客様との会話を<br />サポート！</h2>
                     </div>
                 </div>
                 <div class="col-12 col-md-10 offset-md-1 col-lg-7 offset-lg-0">
@@ -287,7 +287,7 @@
                 <div class="col-12 col-lg-5">
                     <div class="bene-img-wrap">
                         <img src="./res/benefit-3.png" alt="リピート率アップをサポート！" />
-                        <h2>リピート率アップを<br />サポート！</h2>
+                        <h2><p class="stars"></p>リピート率アップを<br />サポート！</h2>
                     </div>
                 </div>
                 <div class="col-12 col-md-10 offset-md-1 col-lg-7 offset-lg-0">
@@ -298,7 +298,7 @@
                 <div class="col-12 col-lg-5">
                     <div class="bene-img-wrap">
                         <img src="./res/benefit-4.png" alt="スタイリストによるヘアメイク" />
-                        <h2>スタイリストによる<br />ヘアメイク！</h2>
+                        <h2><p class="stars"></p>スタイリストによる<br />ヘアメイク！</h2>
                     </div>
                 </div>
                 <div class="col-12 col-md-10 offset-md-1 col-lg-7 offset-lg-0">
@@ -338,6 +338,12 @@
             <div class="row">
                 <p class="bold center col-12 col-md-10 offset-md-1">celine.は福岡でいちばん働きやすい環境を用意しています。そのほかにも、celine.で働くメリットがいっぱい！</p>
             </div>
+
+
+            <div class="row d-flex office-imgs flex-nowrap">
+                <div><img src="./res/office-img.jpg" /></div>
+            </div>
+
             <div class="row custome_dott_wrap">
                 
                 <div class="col-12 col-md-6">
@@ -351,7 +357,7 @@
                         </div>
                     </div>    
                 </div>
-                
+
                 <div class="col-12 col-md-6">
                     <div class="container">
                         <div class="row">
