--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             </div>
 
 
-            <div class="row d-flex office-imgs flex-nowrap">
+            <div class="row office-imgs">
                 <div><img src="./res/office-img.jpg" /></div>
             </div>
 
