some imgs chagend

--- a/index.html
+++ b/index.html
@@ -251,6 +251,26 @@
                 <p class="col-12 col-md-10 offset-md-1">あなたが<strong>稼ぎたい金額に応じてご自分でスケジュール管理</strong>が出来ます。もちろんどんなスケジュールにして良いのか分からない方でも、希望額に応じてスケジュール提案もいたします。
                     <strong>頑張れば頑張る程どんどん時給がアップ</strong>するので、やりがいも抜群です！</p>
             </div>
+            <div id="income" class="mt-16">
+                <div class="row mt-16">
+                    <p class="bold col-12 col-md-10 offset-md-1">celine.なら初月から稼げます！50％以上の方が初月から15万円以上の収入を得ているんです。初心者でもすぐに成果が出るから、やりがいのある仕事です！</p>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-10 offset-md-1">
+                        <p class="bk-black center">チャットレディ初月の収入額</p>
+                        <div class="d-flex tbl justify-content-around">
+                            <img src="./res/income-icon.svg" alt="income chart" />
+                            <ul class="">
+                                <li>1〜10万円&nbsp;<span class="arrow">&#9650;</span>&nbsp;13%</li>
+                                <li>10〜15万円&nbsp;<span class="arrow">&#9650;</span>&nbsp;20%</li>
+                                <li>15〜30万円&nbsp;<span class="arrow">&#9650;</span>&nbsp;28%</li>
+                                <li>30〜50万円&nbsp;<span class="arrow">&#9650;</span>&nbsp;22%</li>
+                                <li>50万円以上&nbsp;<span class="arrow">&#9650;</span>&nbsp;5%</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -303,30 +323,6 @@
                 </div>
                 <div class="col-12 col-md-10 offset-md-1 col-lg-7 offset-lg-0">
                     <p class="msg">容姿だけが全てではありませんが、新規指名、リピートには見た目も影響しています。<br />そこで弊社では<strong>プロのスタイリストがお仕事前に完璧にメイクを行う</strong>ので、いつも以上に綺麗で可愛い姿でお客様とお話しすることができます。</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="income">
-        <h1 class="main_cap">INCOME</h1>
-        <div class="container">
-            <div class="row">
-                <p class="bold center col-12 col-md-10 offset-md-1">celine.なら初月から稼げます！50％以上の方が初月から15万円以上の収入を得ているんです。初心者でもすぐに成果が出るから、やりがいのある仕事です！</p>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-10 offset-md-1">
-                    <p class="bk-black center">チャットレディ初月の収入額</p>
-                    <div class="d-flex tbl justify-content-around">
-                        <img src="./res/income-icon.svg" alt="income chart" />
-                        <ul class="">
-                            <li>1〜10万円&nbsp;<span class="arrow">&#9650;</span>&nbsp;13%</li>
-                            <li>10〜15万円&nbsp;<span class="arrow">&#9650;</span>&nbsp;20%</li>
-                            <li>15〜30万円&nbsp;<span class="arrow">&#9650;</span>&nbsp;28%</li>
-                            <li>30〜50万円&nbsp;<span class="arrow">&#9650;</span>&nbsp;22%</li>
-                            <li>50万円以上&nbsp;<span class="arrow">&#9650;</span>&nbsp;5%</li>
-                        </ul>
-                    </div>
                 </div>
             </div>
         </div>
@@ -540,8 +536,13 @@
             <div class="row">
                 <p class="bold center col-12 col-md-10 offset-md-1">応募から実際に働き始めるまでの流れをご説明します。</p>
             </div>
-            <div class="row">
-            
+            <div class="row cms-video mt-16">
+                <div class="col-12 col-md-10 offset-md-1">
+                    <img src="res/comming-soon-img.jpg" alt="comming soon for the video" />
+                    <p class="txt">- ご応募からの流れ -</p>
+                </div>
+            </div>
+            <div class="row mt-16">
                     <ul class="numbers1">
                         <li class="col-12 col-md-8 offset-md-2">
                             <h2>ご応募・お問い合わせ</h2>
