top image changed

--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
     </header>
 
     <section id="top-image">
-        <img class="d-md-none main" data="1" src="./res/top-smp.jpg" alt="main image" />
+        <!-- <img class="d-md-none main" data="1" src="./res/top-smp.jpg" alt="main image" />
         <img class="d-none d-md-block d-lg-none main" src="./res/top-tab.jpg" alt="main image" />
-        <img class="d-none d-lg-block d-xl-block main" src="./res/top-pc.jpg" alt="main image" />
+        <img class="d-none d-lg-block d-xl-block main" src="./res/top-pc.jpg" alt="main image" /> -->
+        <img class="d-md-none main" data="1" src="./res/top-smp2.jpg" alt="main image" />
+        <img class="d-none d-md-block d-lg-none main" src="./res/top-tab2.jpg" alt="main image" />
+        <img class="d-none d-lg-block d-xl-block main" src="./res/top-pc2.jpg" alt="main image" />
 
         <div class="logo">
             <img src="./res/logo.svg" alt="celine. logo" />
@@ -74,13 +77,15 @@
             <p>最低時給<br />保障!!</p>
         </div>
         <div class="catch">
-            <img class="d-md-none" src="./res/catch_copy.svg" alt="時代は今WEBで稼ぐ時代へ！" />
-            <img class="d-none d-md-block" src="./res/catch_copy_pc.svg" alt="時代は今WEBで稼ぐ時代へ！" />
+            <!-- <img class="d-md-none" src="./res/catch_copy.svg" alt="時代は今WEBで稼ぐ時代へ！" /> -->
+            <!-- <img class="d-none d-md-block" src="./res/catch_copy_pc.svg" alt="時代は今WEBで稼ぐ時代へ！" /> -->
+            <img class="" src="./res/catch_copy_pc2.svg" alt="時代は今WEBで稼ぐ時代へ！" />
         </div>
         <div class="cap2">
             <span>WILL HAVE MANY BENEFITS</span>
             <ul>
-                <li>週に１回1日４時間<br />おしゃべりするだけ！</li>
+                <li>週に１回1日４時間<br class="d-md-none d-block" />おしゃべりするだけ！</li>
+                
                 <li>平均時給 ¥3,200~</li>
                 <li>お仕事ノルマなし!</li>
                 <li>短期も大歓迎!</li>
