update a comming soon

--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
                     <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
                         <p class="bk-black center">こんなことを思っていませんか？</p>
                         <ul class="tbl">
+                            <li class="imgswrap">
+                                <div class="office-imgs">
+                                    <img src="./res/comming-soon-img.jpg" />
+                                </div>
+                            </li>
                             <li>
                                 <img src="./res/check.svg" alt="チェックマーク" />
                                 <span>空き時間を有意義に使いたい</span>
@@ -216,6 +221,9 @@
                         <span>#04</span>
                         <h3>&ldquo; 空いている時間で自由に稼げる &rdquo;</h3>
                         <p>チャットレディのお仕事は、<strong>シフトや出勤ノルマ等一切ありません。</strong>プライベート最優先で空いた時間にお仕事できます。月に稼ぎたい分だけお仕事すればいいので、お仕事もプライベートも賢く充実させましょう！</p>
+                    </div>
+                    <div class="office-imgs">
+                        <img src="./res/comming-soon-img.jpg" />
                     </div>
                 </div>
             </div>
@@ -342,7 +350,7 @@
 
 
             <div class="row office-imgs">
-                <div><img src="./res/office-img.jpg" /></div>
+                <div><img src="./res/comming-soon-img.jpg" /></div>
             </div>
 
             <div class="row custome_dott_wrap">
@@ -543,7 +551,7 @@
             </div>
             <div class="row cms-video mt-16">
                 <div class="col-12 col-md-10 offset-md-1">
-                    <img src="res/comming-soon-img.jpg" alt="comming soon for the video" />
+                    <img src="res/comming-soon-video.jpg" alt="comming soon for the video" />
                     <p class="txt">- ご応募からの流れ -</p>
                 </div>
             </div>
