--- a/index.html
+++ b/index.html
@@ -60,13 +60,9 @@
     </header>
 
     <section id="top-image">
-        <!-- <img class="d-md-none main" data="1" src="./res/top-smp.jpg" alt="main image" />
+        <img class="d-md-none main" data="1" src="./res/top-smp.jpg" alt="main image" />
         <img class="d-none d-md-block d-lg-none main" src="./res/top-tab.jpg" alt="main image" />
-        <img class="d-none d-lg-block d-xl-block main" src="./res/top-pc.jpg" alt="main image" /> -->
-        <img class="d-md-none main" data="1" src="./res/top-smp2.jpg" alt="main image" />
-        <img class="d-none d-md-block d-lg-none main" src="./res/top-tab2.jpg" alt="main image" />
-        <img class="d-none d-lg-block d-xl-block main" src="./res/top-pc2.jpg" alt="main image" />
-
+        <img class="d-none d-lg-block d-xl-block main" src="./res/top-pc.jpg" alt="main image" />
         <div class="logo">
             <img src="./res/logo.svg" alt="celine. logo" />
             <p>[セリーヌ]</p>
@@ -77,9 +73,7 @@
             <p>最低時給<br />保障!!</p>
         </div>
         <div class="catch">
-            <!-- <img class="d-md-none" src="./res/catch_copy.svg" alt="時代は今WEBで稼ぐ時代へ！" /> -->
-            <!-- <img class="d-none d-md-block" src="./res/catch_copy_pc.svg" alt="時代は今WEBで稼ぐ時代へ！" /> -->
-            <img class="" src="./res/catch_copy_pc2.svg" alt="時代は今WEBで稼ぐ時代へ！" />
+            <img class="" src="./res/catch_copy.svg" alt="時代は今WEBで稼ぐ時代へ！" />
         </div>
         <div class="cap2">
             <span>WILL HAVE MANY BENEFITS</span>
