php adjust for server

--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="celine. (セリーヌ) | 福岡で今一番人気のプロダクション">
         <meta property="og:type" content="website">
-        <!-- <meta property="og:image" content="https://chatlady-fukuoka.com/images/image_chat.png"> -->
-        <!--<meta property="og:url" content="https://chatlady-fukuoka.com/kinmu/">-->
+        <meta property="og:image" content="https://chat-fukuoka.com/res/og-img.jpg">
+        <meta property="og:url" content="https://chat-fukuoka.com/">
         <meta property="og:description" content="最低時給1200円を保障！今だけ入店祝い金5万円を支給！はceline.だけ。福岡でチャットレディを始めるなら安心で手厚い保障のceline.がおすすめ！！">
         <meta property="og:site_name" content="celine. (セリーヌ) | 福岡で今一番人気のプロダクション">
-        <!--<meta property="og:image" content="https://chatlady-fukuoka.com/images/image_chat.png">-->
         <meta property="og:locale" content="ja_JP">
         <meta name="twitter:text:title" content="celine. (セリーヌ) | 福岡で今一番人気のプロダクション">
         <meta name="twitter:card" content="summary">
@@ -79,7 +78,6 @@
             <span>WILL HAVE MANY BENEFITS</span>
             <ul>
                 <li>週に１回1日４時間<br class="d-md-none d-block" />おしゃべりするだけ！</li>
-                
                 <li>平均時給 ¥3,200~</li>
                 <li>お仕事ノルマなし!</li>
                 <li>短期も大歓迎!</li>
@@ -593,7 +591,7 @@
                 <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
                     <div class="form-wrap">
                         <!-- <form class="" action="./php/sendmail.php" method="post"> -->
-                            <form class="" method="post">
+                            <form id="apply_form" accept-charset="utf-8" class="" method="post">
                             <h2>応募フォーム</h2>
                             <div id="form-body" class="container">
                                 <div class="row">
