--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176013803-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-176013803-1');
+        </script>
+
         <!-- meta -->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -581,7 +590,7 @@
                     <a href="https://lin.ee/4KhTqqirH" target="_blank" rel=”noopener”><span class="line">LINEで応募する</span></a>
                 </div>
                 <div class="col-10 offset-1 col-md-4 offset-md-0 btn" data="phone">
-                    <a href="#"><span class="phone">電話で応募する</span></a>
+                    <a href="tel:0120897296"><span class="phone">電話で応募する</span></a>
                 </div>
                 <div class="col-10 offset-1 col-md-4 offset-md-0 btn" data="mail">
                     <a href="mailto:celinelivechat@gmail.com"><span class="mail">メールで応募する</span></a>
