--- a/index.html
+++ b/index.html
@@ -491,6 +491,9 @@
                 <p class="col-12 col-md-10 offset-md-1">
                     初めてチャットレディとして働く方を応援するため、セリーヌでは入店お祝い金として<strong>最大5万円を入店が決まった方全員にプレゼント！</strong><br />初月にどれだけ稼げるか心配な方に、少しでも安心してスタートして欲しい。セリーヌは福岡でいちばん働きやすいチャットプロダクションを目指しています！
                 </p>
+                <p class="col-12 col-md-10 offset-md-1">
+                    <strong>さらに初心者応援！</strong><br />最低時給保証¥1200~お仕事が全然分からないから不安という方も、時給保証があるので稼ぎながら安心してお仕事を覚えて下さい♪
+                </p>
             </div>
         </div>
     </section>
