--- a/index.html
+++ b/index.html
@@ -195,31 +195,32 @@
             <div class="row">
                 <div class="col-12 col-lg-10 offset-lg-1">
                     <h3>
-                        <img class="d-md-none" src="./res/working_chatlady-smp.jpg" alt="チャットレディのお仕事について" />
+                        <video src="./res/interview.mp4" preload="none" playinline autoplay controls poster="./res/working_chatlady-pc.jpg"></video>
+                        <!-- <img class="d-md-none" src="./res/working_chatlady-smp.jpg" alt="チャットレディのお仕事について" />
                         <img class="d-none d-md-block d-lg-none" src="./res/working_chatlady-tab.jpg" alt="チャットレディのお仕事について" />
-                        <img class="d-none d-lg-block d-xl-block" src="./res/working_chatlady-pc.jpg" alt="チャットレディのお仕事について" />
+                        <img class="d-none d-lg-block d-xl-block" src="./res/working_chatlady-pc.jpg" alt="チャットレディのお仕事について" /> -->
                     </h3>
                 </div>
-                <div class="col-12 col-lg-10 offset-lg-1 chatlady_desc_wrap">
+                <div class="col-12 col-md-10 offset-md-1 chatlady_desc_wrap">
                     <p class="blackline"></p>
                     <div class="each">
-                        <span>#01</span>
-                        <h4>&ldquo; パソコンに向かってお話しするだけ &rdquo;</h4>
+                        <span class="d-none d-lg-block">#01</span>
+                        <h4><strong class="d-lg-none">#01</strong>&ldquo;パソコンに向かってお話しするだけ&rdquo;<span class="arrow d-md-none">&gt;</span></h4>
                         <p>チャットレディは、<strong>パソコンを使って男性とお話するお仕事です。</strong>男性はチャット（文字）での会話となっているので、人と対面でおしゃべりすることが苦手な方でも、パソコンに向かってお話するだけで大丈夫。男性も優しい方ばかりなので、もし嫌な人がいてもブロックできるので安心です。</p>
                     </div>
                     <div class="">
-                        <span>#02</span>
-                        <h4>&ldquo; 年齢や見た目なんて気にせずOK &rdquo;</h4>
+                        <span class="d-none d-lg-block">#02</span>
+                        <h4><strong class="d-lg-none">#02</strong>&ldquo;年齢や見た目なんて気にせずOK&rdquo;<span class="arrow d-md-none">&gt;</span></h4>
                         <p>男性は色んなタイプの方がいます。年齢やスタイルなんて気にしなくても、あなたの良いところを応援してくれる方ばかりなので「見た目に自信が、、」「年齢的に厳しいかな、、」そういった事を一切気にする必要はありません。</p>
                     </div>
                     <div class="">
-                        <span>#03</span>
-                        <h4>&ldquo; 好きなスタイルで働ける &rdquo;</h4>
+                        <span class="d-none d-lg-block">#03</span>
+                        <h4><strong class="d-lg-none">#03</strong>&ldquo;好きなスタイルで働ける&rdquo;<span class="arrow d-md-none">&gt;</span></h4>
                         <p>アダルトチャット等の強制は一切ありません。<strong>自分のスタイルでノンアダルトでもアダルトでもお好きな方で稼げます。</strong>天神駅・薬院駅近くの綺麗で広々としたオフィスでパソコンを使ってのお仕事なので、男性と直接会うことや触れられることは一切なし。こんな不安な時代でも安心して働けます。自分に合ったスタイルで楽しく稼いでください！</p>
                     </div>
                     <div class="">
-                        <span>#04</span>
-                        <h4>&ldquo; 空いている時間で自由に稼げる &rdquo;</h4>
+                        <span class="d-none d-lg-block">#04</span>
+                        <h4><strong class="d-lg-none">#04</strong>&ldquo;空いている時間で自由に稼げる&rdquo;<span class="arrow d-md-none">&gt;</span></h4>
                         <p>チャットレディのお仕事は、<strong>シフトや出勤ノルマ等一切ありません。</strong>プライベート最優先で空いた時間にお仕事できます。月に稼ぎたい分だけお仕事すればいいので、お仕事もプライベートも賢く充実させましょう！</p>
                     </div>
                     <div class="roomcap">
@@ -273,12 +274,6 @@
                     <img src="./res/case2.png" alt="case3" /> 
                 </div>
             </div>
-            <div class="row mt-16">
-                <!-- <div class="custome_dott"></div> -->
-                <p class="col-12 col-md-10 offset-md-1">あなたが<strong>稼ぎたい金額に応じてご自分でスケジュール管理</strong>が出来ます。もちろんどんなスケジュールにして良いのか分からない方でも、希望額に応じてスケジュール提案もいたします。
-                    <strong>頑張れば頑張る程どんどん時給がアップ</strong>するので、やりがいも抜群です！</p>
-                <p class="bold col-12 col-md-10 offset-md-1">celine.なら初月から稼げます！50％以上の方が初月から15万円以上の収入を得ているんです。初心者でもすぐに成果が出るから、やりがいのある仕事です！</p>
-            </div>
             <div id="income" class="mt-16">
                 <div class="row">
                     <div class="col-12 col-md-10 offset-md-1">
@@ -296,6 +291,14 @@
                     </div>
                 </div>
             </div>
+            <div class="row mt-16">
+                <div class="col-12 col-md-10 offset-md-1">
+                    <img class="eyecatch" src="./res/workstyle-img1.jpg" alt="celine workstyle" />
+                </div>
+                <p class="col-12 col-md-10 offset-md-1 mt-16">あなたが<strong>稼ぎたい金額に応じてご自分でスケジュール管理</strong>が出来ます。もちろんどんなスケジュールにして良いのか分からない方でも、希望額に応じてスケジュール提案もいたします。
+                    <strong>頑張れば頑張る程どんどん時給がアップ</strong>するので、やりがいも抜群です！</p>
+                <p class="bold col-12 col-md-10 offset-md-1">celine.なら初月から稼げます！50％以上の方が初月から15万円以上の収入を得ているんです。初心者でもすぐに成果が出るから、やりがいのある仕事です！</p>
+            </div>
         </div>
     </section>
 
@@ -310,10 +313,13 @@
                     <div class="bene-img-wrap">
                         <img src="./res/benefit-1.png" alt="celineだけの最低時給保障" />
                         <h3><span class="stars"></span>celineだけの<br />最低時給保障</h3>
+                        <div class="d-md-none arrow" data='bene1'>
+                            <span class="">&gt;</span>
+                        </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-0">
-                    <p class="msg">チャットレディの業界では日によってお客様が少なく、オフィスに来ても待っているだけで時間が過ぎてしまった…ということもあります。この場合、普通は収入が発生しないの発生しないのですが、セリーヌでは<strong>お客様が入らなかったとしても最低時給1200円</strong>と定めていますので、出勤したのに収入が０円ということはありません。セリーヌではあなたの貴重な時間を大切にしたい、という気持ちから他社ではやっていない「最低時給制度」を設けています。仮に、出勤してお客様とお話することがなかったとしても、1時間1200円をお支払いしています。
+                    <p class="msg" data='bene1'>チャットレディの業界では日によってお客様が少なく、オフィスに来ても待っているだけで時間が過ぎてしまった…ということもあります。この場合、普通は収入が発生しないの発生しないのですが、セリーヌでは<strong>お客様が入らなかったとしても最低時給1200円</strong>と定めていますので、出勤したのに収入が０円ということはありません。セリーヌではあなたの貴重な時間を大切にしたい、という気持ちから他社ではやっていない「最低時給制度」を設けています。仮に、出勤してお客様とお話することがなかったとしても、1時間1200円をお支払いしています。
                         チャットのお仕事が初めてで稼ぎ方が分からない方でも、時給保証で安心しながらゆっくりお仕事を覚えていけます！</p>
                 </div>
             </div>
@@ -322,10 +328,13 @@
                     <div class="bene-img-wrap">
                         <img src="./res/benefit-2.png" alt="お客様との会話をサポート！" />
                         <h3><span class="stars"></span>お客様との会話を<br />サポート！</h3>
+                        <div class="d-md-none arrow" data='bene2'>
+                            <span class="">&gt;</span>
+                        </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-0">
-                    <p class="msg">男性とお話しすることが苦手な方でも、短期間で<strong>聞き上手、話し上手になれるトークマニュアルを用意</strong>しています。このマニュアルさえあれば、お客様に満足してもらえる会話スキルが身に付くこと間違いなし！</p>
+                    <p class="msg" data='bene2'>男性とお話しすることが苦手な方でも、短期間で<strong>聞き上手、話し上手になれるトークマニュアルを用意</strong>しています。このマニュアルさえあれば、お客様に満足してもらえる会話スキルが身に付くこと間違いなし！</p>
                 </div>
             </div>
             <div class="row">
@@ -333,10 +342,13 @@
                     <div class="bene-img-wrap">
                         <img src="./res/benefit-3.png" alt="リピート率アップをサポート！" />
                         <h3><span class="stars"></span>リピート率アップを<br />サポート！</h3>
+                        <div class="d-md-none arrow" data='bene3'>
+                            <span class="">&gt;</span>
+                        </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-0">
-                    <p class="msg">チャットレディとして効率的に稼ぐためには、リピート客を増やすことです。でも、お客様に気に入ってもらうことは難しそうですよね。会話の中でちょっとしたテクニックを使えば簡単にリピート客を増やすことができるんです！その秘密をお教えします。</p>
+                    <p class="msg" data='bene3'>チャットレディとして効率的に稼ぐためには、リピート客を増やすことです。でも、お客様に気に入ってもらうことは難しそうですよね。会話の中でちょっとしたテクニックを使えば簡単にリピート客を増やすことができるんです！その秘密をお教えします。</p>
                 </div>
             </div>
             <div class="row">
@@ -344,10 +356,13 @@
                     <div class="bene-img-wrap">
                         <img src="./res/benefit-4.png" alt="スタイリストによるヘアメイク" />
                         <h3><span class="stars"></span>スタイリストによる<br />ヘアメイク！</h3>
+                        <div class="d-md-none arrow" data='bene4'>
+                            <span class="">&gt;</span>
+                        </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-0">
-                    <p class="msg">容姿だけが全てではありませんが、新規指名、リピートには見た目も影響しています。<br />そこで弊社では<strong>プロのスタイリストがお仕事前に完璧にメイクを行う</strong>ので、いつも以上に綺麗で可愛い姿でお客様とお話しすることができます。</p>
+                    <p class="msg" data='bene4'>容姿だけが全てではありませんが、新規指名、リピートには見た目も影響しています。<br />そこで弊社では<strong>プロのスタイリストがお仕事前に完璧にメイクを行う</strong>ので、いつも以上に綺麗で可愛い姿でお客様とお話しすることができます。</p>
                 </div>
             </div>
         </div>
@@ -491,9 +506,10 @@
                 <p class="col-12 col-md-10 offset-md-1">
                     初めてチャットレディとして働く方を応援するため、セリーヌでは入店お祝い金として<strong>最大5万円を入店が決まった方全員にプレゼント！</strong><br />初月にどれだけ稼げるか心配な方に、少しでも安心してスタートして欲しい。セリーヌは福岡でいちばん働きやすいチャットプロダクションを目指しています！
                 </p>
-                <p class="col-12 col-md-10 offset-md-1">
-                    <strong>さらに初心者応援！</strong><br />最低時給保証¥1200~お仕事が全然分からないから不安という方も、時給保証があるので稼ぎながら安心してお仕事を覚えて下さい♪
-                </p>
+                <div class="col-12 col-md-10 offset-md-1">
+                    <h3 class="cheerup"><strong><span>さらに初心者応援！</span></strong></h3>
+                    <p>最低時給1,200円を保証!!お仕事が全然分からないから不安という方も、時給保証があるので稼ぎながら安心してお仕事を覚えて下さい♪</p>
+                </div>
             </div>
         </div>
     </section>
@@ -688,6 +704,9 @@
             福岡チャトレディで働くなら<br />
                 <span class="logo">celine.</span>
         </h2>
+        <div>
+            <small>写真提供：shutterstock, 福岡市</small>
+        </div>
 	    <p id="copyright">&copy;2021 celine.</p><!-- copyright -->
     </footer>
 
