--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="row">
                 <div class="col-12 col-lg-10 offset-lg-1">
                     <h3>
-                        <video src="./res/interview.mp4" preload="metadata" playinline autoplay controls poster="./res/interview-poster.jpg"></video>
+                        <video src="./res/interview.mp4" preload="metadata" playinline controls poster="./res/interview-poster.jpg"></video>
                         <!-- <img class="d-md-none" src="./res/working_chatlady-smp.jpg" alt="チャットレディのお仕事について" />
                         <img class="d-none d-md-block d-lg-none" src="./res/working_chatlady-tab.jpg" alt="チャットレディのお仕事について" />
                         <img class="d-none d-lg-block d-xl-block" src="./res/working_chatlady-pc.jpg" alt="チャットレディのお仕事について" /> -->
