--- a/contact/index.html
+++ b/contact/index.html
@@ -44,8 +44,15 @@
 <body>
     <header id="header">
         <div class="smpMenu d-flex">
-            <div class="humberger menu_btn">
+            <!-- <div class="humberger menu_btn">
                 <span></span><span></span>
+            </div> -->
+            <div class="smpfixed d-lg-none">
+                <ul class="d-flex">
+                    <li class='menu'><span></span><span></span>メニュー</li>
+                    <li><a href="./contact/">応募する</a></li>
+                    <li><a href="#header">TOPへ</a></li>
+                </ul>
             </div>
             <div class="menuwrap">
             <ul>
@@ -61,52 +68,7 @@
         </div>
     </header>
 
-    <!-- <section id="top-image">
-        <img class="d-md-none main" data="1" src="../res/top-smp.jpg" alt="main image" />
-        <img class="d-none d-md-block d-lg-none main" src="../res/top-tab.jpg" alt="main image" />
-        <img class="d-none d-lg-block d-xl-block main" src="../res/top-pc.jpg" alt="main image" />
-        <h1 class="logo">
-            <img src="../res/logo.svg" alt="celine. logo" />
-            <span>[セリーヌ]</span>
-            <span>福岡で一番人気のプロダクション</span>
-        </h1>
-        <div class="cap1">
-            <p>celine.だけ</p>
-            <p>最低時給<br />保障!!</p>
-        </div>
-        <div class="catch">
-            <img class="" src="../res/catch_copy.svg" alt="時代は今WEBで稼ぐ時代へ！" />
-        </div>
-        <div class="cap2">
-            <span>WILL HAVE MANY BENEFITS</span>
-            <ul>
-                <li>週に１回1日４時間<br class="d-md-none d-block" />おしゃべりするだけ！</li>
-                <li>平均時給 ¥3,200~</li>
-                <li>お仕事ノルマなし!</li>
-                <li>短期も大歓迎!</li>
-            </ul>
-        </div>
-        <div class="cap3">
-            <span>ANY OTHER BENEFITS</span>
-            <ul class="holizontal_list d-flex flex-wrap">
-                <li>フリードリンク</li>
-                <li>日払い対応</li>
-                <li>ノルマなし</li>
-                <li>シャワールーム</li>
-                <li>更衣室</li>
-                <li>化粧道具</li>
-                <li>衣装</li>
-            </ul>
-            <ul class="holizontal_list mo d-flex flex-wrap">
-                <li>ノンアダルトOK!</li>
-                <li>顔出しなしOK!</li>
-                <li>天神徒歩圏内!</li>
-                <li>専属スタイリスト!</li>
-            </ul>
-        </div>
-    </section> -->
-
-    <section id="apply">
+    <section id="apply" class='contact' style="border-top:none;">
         <h2 class="main_cap en_title"><small>APPLY</small><br />ご応募はこちら</h2>
         <div class="container">
             <div class="row">
@@ -207,9 +169,10 @@
                 <p class="col-12 col-md-10 offset-md-1">
                     初めてチャットレディとして働く方を応援するため、セリーヌでは入店お祝い金として<strong>最大5万円を入店が決まった方全員にプレゼント！</strong><br />初月にどれだけ稼げるか心配な方に、少しでも安心してスタートして欲しい。セリーヌは福岡でいちばん働きやすいチャットプロダクションを目指しています！
                 </p>
-                <p class="col-12 col-md-10 offset-md-1">
-                    <strong>さらに初心者応援！</strong><br />最低時給保証¥1200~お仕事が全然分からないから不安という方も、時給保証があるので稼ぎながら安心してお仕事を覚えて下さい♪
-                </p>
+                <div class="col-12 col-md-10 offset-md-1">
+                    <h3 class="cheerup"><strong><span>さらに初心者応援！</span></strong></h3>
+                    <p>最低時給1,200円を保証!!お仕事が全然分からないから不安という方も、時給保証があるので稼ぎながら安心してお仕事を覚えて下さい♪</p>
+                </div>
             </div>
         </div>
     </section>    
