--- a/index.html
+++ b/index.html
@@ -46,8 +46,15 @@
 <body>
     <header id="header">
         <div class="smpMenu d-flex">
-            <div class="humberger menu_btn">
+            <!-- <div class="humberger menu_btn">
                 <span></span><span></span>
+            </div> -->
+            <div class="smpfixed d-lg-none">
+                <ul class="d-flex">
+                    <li class='menu'><span></span><span></span>メニュー</li>
+                    <li><a href="./contact/">応募する</a></li>
+                    <li><a href="#header">TOPへ</a></li>
+                </ul>
             </div>
             <div class="menuwrap">
             <ul>
