--- a/index.html
+++ b/index.html
@@ -299,8 +299,16 @@
                 </div>
             </div>
             <div class="row mt-16">
-                <div class="col-12 col-md-10 offset-md-1">
+                <div class="col-12 col-md-10 offset-md-1 info">
                     <img class="eyecatch" src="./res/workstyle-img1.jpg" alt="celine workstyle" />
+                    <div class="">
+                        <h3>収入例</h3>
+                        <p>副業で働くゆいなちゃんの1ヶ月のお給料♡</p>
+                        <p><strong>¥240,000 / 月</strong></p>
+                        <p>時給¥4000 × 1日5h  = ¥20,000</p>
+                        <p>(週に3回の出勤)=12日出勤/月</p>
+                        <p>¥20,000×12日= ¥240,000</p>
+                    </div>
                 </div>
                 <p class="col-12 col-md-10 offset-md-1 mt-16">あなたが<strong>稼ぎたい金額に応じてご自分でスケジュール管理</strong>が出来ます。もちろんどんなスケジュールにして良いのか分からない方でも、希望額に応じてスケジュール提案もいたします。
                     <strong>頑張れば頑張る程どんどん時給がアップ</strong>するので、やりがいも抜群です！</p>
