bug fix for menu

--- a/contact/index.html
+++ b/contact/index.html
@@ -50,7 +50,7 @@
             <div class="smpfixed d-lg-none">
                 <ul class="d-flex">
                     <li class='menu'><span></span><span></span>メニュー</li>
-                    <li><a href="./contact/">応募する</a></li>
+                    <li><a href="#header">応募する</a></li>
                     <li><a href="#header">TOPへ</a></li>
                 </ul>
             </div>
