upd top image #1

--- a/index.html
+++ b/index.html
@@ -41,14 +41,12 @@
         
         <!-- web-font -->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet">
 
     </head>
 <body>
     <header id="header">
         <div class="smpMenu d-flex">
-            <!-- <div class="humberger menu_btn">
-                <span></span><span></span>
-            </div> -->
             <div class="smpfixed d-lg-none">
                 <ul class="d-flex">
                     <li class='menu'><span></span><span></span>メニュー</li>
@@ -70,7 +68,59 @@
         </div>
     </header>
 
-    <section id="top-image">
+    <section id="top-image" class="bk-pink">
+        <div class="relative d-flex flex-column">
+        <div class="img-wrap">
+            <img src="res/celine-top1.jpg" alt="celine live chat" />
+        </div>
+        <div class="wrap1">
+            <div class="relative">
+                <p class="sub">[セリーヌ]<br />福岡で一番人気のプロダクション</p>
+                <h1 class=""><img src="./res/logo.svg" alt="celine. logo" /></h1>
+            </div>
+        </div>
+        <div class="wrap2">
+            <p><span>5</span>万円</p>
+            <small>入店祝金</small>
+        </div>
+        <div class="wrap3">
+            <small class="sub">WILL HAVE MANY BENEFITS</small>
+            <h2><small>平均時給</small><br />3200<small>円</small>〜</h2>
+            <ul class="">
+                <li>最低時給保障</li>
+                <li>お仕事ノルマなし</li>
+                <li>身バレなし</li>
+            </ul>
+        </div>
+        <div class="wrap4">
+            <p><span>今のうちに</span><br/><span>稼ぐ。</span></p>
+            <small>コロナ落ち着いたら<br />まずは海外旅行でしょ！</small>
+        </div>
+        <div class="wrap5">
+            <p>やりたい事いっぱいあるから始めた。</p>
+        </div>
+        <div class="wrap6">
+            <small class='sub'>ANY OTHER BENEFITS</small>
+            <ul class="d-flex flex-row flex-wrap">
+                <li>フリードリンク&nbsp;/</li>
+                <li>&nbsp;日払い対応&nbsp;/</li>
+                <li>&nbsp;ノルマなし&nbsp;/</li>
+                <li>&nbsp;顔出しなしOK!&nbsp;/</li>
+                <li>&nbsp;ノンアダルトOK!&nbsp;/</li>
+                <li>&nbsp;シャワールーム&nbsp;/</li>
+                <li>&nbsp;更衣室&nbsp;/</li>
+                <li>&nbsp;化粧道具&nbsp;/</li>
+                <li>&nbsp;衣装&nbsp;/</li>
+                <li>&nbsp;専属スタイリスト&nbsp;/</li>
+                <li>&nbsp;天神徒歩圏内</li>
+            </ul>
+        </div>
+        <div class="wrap7">
+            <p>20歳以上の学生から 50代主婦の方まで幅広く活躍中</p>
+        </div>
+    </div>
+    </section>
+    <!-- <section id="top-image">
         <img class="d-md-none main" data="1" src="./res/top-smp.jpg" alt="main image" />
         <img class="d-none d-md-block d-lg-none main" src="./res/top-tab.jpg" alt="main image" />
         <img class="d-none d-lg-block d-xl-block main" src="./res/top-pc.jpg" alt="main image" />
@@ -113,7 +163,7 @@
                 <li>専属スタイリスト!</li>
             </ul>
         </div>
-    </section>
+    </section> -->
 
     <section id="tokuten">
         <h2><span class="full_bd">celine.だけの特典！</span></h2>
